--- a/config.ini
+++ b/config.ini
@@ -15,6 +15,17 @@ rtsp_port = 6604
 # HLS Port
 hls_port = 16604
 
+# UI Elements Visibility (1 = show, 0 = hide)
+show_login_button = 1
+show_save_button = 1
+show_vehicle_info_button = 1
+show_device_alarms_button = 1
+show_auto_refresh_button = 1
+show_rtsp_button = 1
+show_rtmp_button = 1
+show_hls_button = 1
+show_company_hierarchy = 0
+
 # Other configuration options can be added below
 # Example:
 # map_port = 8080
