--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -3,11 +3,11 @@ name: Build and Release Go Windows Binary
 on:
   push:
     tags:
-      - 'v*'   # Срабатывает только при пуше тега вида v1.0.0
+      - 'v*'   # Trigger only when pushing a tag like v1.0.0
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
       - name: Checkout code
@@ -16,12 +16,14 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.22'    # Используй нужную версию Go
+          go-version: '1.22'
 
       - name: Build Windows binary
-        run: GOOS=windows GOARCH=amd64 go build -o myapp.exe
+        run: go build -o myapp.exe
 
       - name: Upload Release Asset
         uses: softprops/action-gh-release@v2
         with:
           files: myapp.exe
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
