--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -3,7 +3,7 @@ name: Build and Release Go Windows Binary
 on:
   push:
     tags:
-      - 'v*'   # Trigger only when pushing a tag like v1.0.0
+      - 'v*'   # Trigger only on tag push like v1.0.0
 
 jobs:
   build:
@@ -26,4 +26,4 @@ jobs:
         with:
           files: myapp.exe
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
