--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -25,4 +25,4 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: myapp.exe
-          token: ${{ secrets.RELEASE_TOKEN }}  # ✅ ВАЖНО: использовать `token` вместо `env`
+          token: ${{ secrets.RELEASE_TOKEN }}   # ← ОБЯЗАТЕЛЬНО здесь
